<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_drawer_group1"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_drawer_artists"
            android:icon="@drawable/ic_drawer_artists"
            android:title="@string/navdrawer_item_artists" />

        <item
            android:id="@+id/menu_drawer_playlists"
            android:icon="@drawable/ic_drawer_playlists"
            android:title="@string/navdrawer_item_playlists" />

    </group>

    <group android:id="@+id/menu_drawer_group2"
        android:checkableBehavior="none" >

        <item
            android:id="@+id/menu_drawer_queue"
            android:icon="@drawable/ic_drawer_queue"
            android:title="@string/navdrawer_item_queue" />

    </group>

    <group android:id="@+id/menu_drawer_group3"
        android:checkableBehavior="none" >

        <item
            android:id="@+id/menu_drawer_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/navdrawer_item_settings" />

    </group>

</menu>